Complete User Inferface withot responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="btn-set">
                         <a href="#" class="demo">Demo <i class="fa-solid fa-caret-right"></i></a>
                         <a href="#">Free Trail</a>
-                        <a href="#" class="user"><i class="fa-solid fa-user"></i></a>
+                        <a href="#" class="user"><i class="fa-regular fa-user"></i></a>
                     </div>
                 </div>
             </div>
@@ -146,13 +146,208 @@
         <div class="pricing">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6">
                         <h4>pricing</h4>
                         <h1>Our pricing plans</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit dolor posuere vel venenatis eu sit massa volutpat.</p>
                     </div>
-                    <div class="col-md-4"></div>
+                    <div class="col-md-3"></div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="card">
+                            <div class="details">
+                                <div class="icon">
+                                    <img src="images/basic.png" alt="">
+                                </div>
+                                <div class="headings">
+                                    <h4>For individuals</h4>
+                                    <h2>Basic</h2>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet doloroli sitiol conse ctetur adipiscing elit. </p>
+                            <h3>$99 <small>/monthly</small></h3>
+                            <h5>What’s included</h5>
+                            <ul>
+                                <li>All analytics features</li>
+                                <li>Up to 250,000 tracked visits</li>
+                                <li>Normal support</li>
+                                <li>Up to 3 team members</li>
+                            </ul>
+                            <a href="#">Get Started</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="card card-dark">
+                            <span class="badge">Popular</span>
+                            <div class="details">
+                                <div class="icon">
+                                    <img src="images/pro.png" alt="">
+                                </div>
+                                <div class="headings">
+                                    <h4>For startups</h4>
+                                    <h2>Pro</h2>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet doloroli sitiol conse ctetur adipiscing elit. </p>
+                            <h3>$199 <small>/monthly</small></h3>
+                            <h5>What’s included</h5>
+                            <ul>
+                                <li>All analytics features</li>
+                                <li>Up to 1,000,000 tracked visits</li>
+                                <li>Premium support</li>
+                                <li>Up to 10 team members</li>
+                            </ul>
+                            <a href="#">Get Started</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="card">
+                            <div class="details">
+                                <div class="icon">
+                                    <img src="images/enterprise.png" alt="">
+                                </div>
+                                <div class="headings">
+                                    <h4>For big companies</h4>
+                                    <h2>Enterprise</h2>
+                                </div>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet doloroli sitiol conse ctetur adipiscing elit. </p>
+                            <h3>$399 <small>/monthly</small></h3>
+                            <h5>What’s included</h5>
+                            <ul>
+                                <li>All analytics features</li>
+                                <li>Up to 5,000,000 tracked visits</li>
+                                <li>Dedicated support</li>
+                                <li>Up to 50 team members</li>
+                            </ul>
+                            <a href="#">Get Started</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Robert Willamson</h2>
+                        <h4>Founder and CEO, <strong>Clicklink</strong></h4>
+                        <p>We go the extra mile to meet your needs and proactively work with you to achieve the results you want. Your success is our success. We go the extra mile to meet your needs and proactively work with you to achieve the results you want. Your success is our success. We go the extra mile to meet your needs and proactively work with you to achieve the results you want. Your success is our success. We go the extra mile to meet your needs and proactively work with you to achieve the results you want. Your success is our success. We go the extra mile to meet your needs and proactively work with you to achieve the results you want. Your success is our success.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-md-5">
+                        <h2>Contact Us</h2>
+                        <ul>
+                            <li><img src="images/phone.png" alt=""> +1012 3456 789</li>
+                            <li><img src="images/email.png" alt=""> demo@gmail.com</li>
+                            <li><img src="images/address.png" alt=""> 132 Dartmouth Street Boston, Massachusetts 02156 United States</li>
+                        </ul>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.018553205165!2d-87.95515187508995!3d42.0828831433788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fba3f65d90bc5%3A0xb6530f77c309267e!2sN%20Evanston%20Ave%2C%20Arlington%20Heights%2C%20IL%2060004%2C%20USA!5e0!3m2!1sen!2s!4v1703273318174!5m2!1sen!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="col-lg-1 col-md-1"></div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="form">
+                            <h5>Get in Touch</h5>
+                            <form action="#">
+                                <input type="text" placeholder="Name">
+                                <input type="text" placeholder="email">
+                                <input type="text" placeholder="Number">
+                                <textarea name="" placeholder="Message" cols="30" rows="5"></textarea>
+                                <button type="submit">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="images/logo-color.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    <div class="contact-details">
+                        <p>Contact Clicklink</p>
+                        <p><a href="#">+1 (855) 747 6767</a> or <a href="#">sales@Clicklink.com</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-md-1"></div>
+                <div class="col-lg-4 col-md-4">
+                    <div class="copyright">
+                        <address>© 2023 Clicklink Inc. All Rights Reserved</address>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <hr>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <div class="footer-links">
+                        <h3>Company</h3>
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Leadership</a></li>
+                            <li><a href="#">Investors</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Customers</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Insights &amp; Trends</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <div class="footer-links">
+                        <h3>Support & Success</h3>
+                        <ul>
+                            <li><a href="#">Support</a></li>
+                            <li><a href="#">Training &amp; Certification</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Student Academy</a></li>
+                            <li><a href="#">Community</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <div class="footer-links">
+                        <h3>Follow us on</h3>
+                        <div class="social">
+                            <a href="#"><img src="images/facebook.png" alt=""></a>
+                            <a href="#"><img src="images/youtube.png" alt=""></a>
+                            <a href="#"><img src="images/linkedin.png" alt=""></a>
+                        </div>
+                        <div class="extras">
+                            <a href="#">Legal</a>
+                            <a href="#">Privacy Notice</a>
+                            <a href="#">Site Terms</a>
+                            <a href="#">Cookie Policy</a><br>
+                            <a href="#">Do Not Share My Personal Information</a>
+                            <a href="#">Security</a>
+                            <a href="#">Accessibility</a>
+                            <a href="#">Unsubscribe</a>
+                            <a href="#">Sitemap</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <div class="footer-links">
+                        <h3>Download App Now</h3>
+                        <a href="#">
+                            <img src="images/apps.png" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
