--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Link</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -15,30 +15,51 @@
     <div id="header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-2 col-md-2">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-4">
                     <div class="logo">
                         <a href="index.html">
                             <img src="images/logo.png" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-5">
+                <div class="col-lg-5 d-lg-block d-none ">
                     <div class="nav-custom">
                         <ul>
-                            <li><a href="#">Product</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#products">Product</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#pricings">Pricing</a></li>
+                            <li><a href="#contact">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-1 col-md-1"></div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-md-8 col-sm-7 col-6 d-lg-none"></div>
+                <div class="col-lg-1 col-md-0"></div>
+                <div class="col-lg-4 col-md-2 col-sm-2 col-2">
                     <div class="btn-set">
-                        <a href="#" class="demo">Demo <i class="fa-solid fa-caret-right"></i></a>
-                        <a href="#">Free Trail</a>
+                        <a href="#" class="demo d-lg-block d-none">Demo <i class="fa-solid fa-caret-right"></i></a>
+                        <a href="#" class="d-lg-block d-none">Free Trial</a>
                         <a href="#" class="user"><i class="fa-regular fa-user"></i></a>
+                        <div class="nav-toggle d-lg-none">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
                     </div>
+                </div>
+                <div class="d-lg-none">
+                    <div class="nav-collapse">
+                        <div class="nav-custom">
+                            <ul>
+                                <li><a href="#products">Product</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#pricings">Pricing</a></li>
+                                <li><a href="#contact">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="btn-set">
+                            <a href="#" class="demo">Demo <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="#">Free Trial</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -53,7 +74,7 @@
                             <p>Customer service, IT, and CRM software that’s powerful yet easy to use. Now supercharged with generative AI.</p>
                             <div class="btn-set">
                                 <a href="#">Demo <i class="fa-solid fa-caret-right"></i></a>
-                                <a href="#">Free Trail</a>
+                                <a href="#">Free Trial</a>
                             </div>
                         </div>
                     </div>
@@ -65,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="products">
+        <div class="products" id="products">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -97,7 +118,7 @@
                 </div>
             </div>
         </div>
-        <div class="services">
+        <div class="services" id="services">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -143,17 +164,17 @@
                 </div>
             </div>
         </div>
-        <div class="pricing">
+        <div class="pricing" id="pricings">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3"></div>
-                    <div class="col-md-6">
+                    <div class="col-lg-3 col-md-2"></div>
+                    <div class="col-lg-6 col-md-8">
                         <h4>pricing</h4>
                         <h1>Our pricing plans</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit dolor posuere vel venenatis eu sit massa volutpat.</p>
                     </div>
-                    <div class="col-md-3"></div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-3 col-md-2"></div>
+                    <div class="col-lg-4 col-md-12">
                         <div class="card">
                             <div class="details">
                                 <div class="icon">
@@ -176,7 +197,7 @@
                             <a href="#">Get Started</a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-4 col-md-12">
                         <div class="card card-dark">
                             <span class="badge">Popular</span>
                             <div class="details">
@@ -200,7 +221,7 @@
                             <a href="#">Get Started</a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-4 col-md-12">
                         <div class="card">
                             <div class="details">
                                 <div class="icon">
@@ -237,7 +258,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-5">
@@ -291,7 +312,7 @@
                 <div class="col-md-12">
                     <hr>
                 </div>
-                <div class="col-lg-3 col-md-3">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                     <div class="footer-links">
                         <h3>Company</h3>
                         <ul>
@@ -308,7 +329,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                     <div class="footer-links">
                         <h3>Support & Success</h3>
                         <ul>
@@ -352,5 +373,35 @@
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+    $(document).ready(function(){
+    // Add smooth scrolling to all links
+    $("a").on('click', function(event) {
+
+        // Make sure this.hash has a value before overriding default behavior
+        if (this.hash !== "") {
+        // Prevent default anchor click behavior
+        event.preventDefault();
+
+        // Store hash
+        var hash = this.hash;
+
+        // Using jQuery's animate() method to add smooth page scroll
+        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+        $('html, body').animate({
+            scrollTop: $(hash).offset().top
+        }, 800, function(){
+
+            // Add hash (#) to URL when done scrolling (default click behavior)
+            window.location.hash = hash;
+        });
+        } // End if
+    });
+    });
+    $('.nav-toggle').click(function(){
+        $('.nav-collapse').toggleClass('show');
+    });
+    </script>
 </body>
 </html>
